--- a/package.json
+++ b/package.json
@@ -1,22 +1,24 @@
 {
   "name": "frontend-start",
-  "version": "1.3.0",
+  "version": "1.5.0",
   "main": "src/index.html",
   "repository": "https://github.com/acr0matic/frontend-start",
   "author": "acr0matic",
   "license": "MIT",
   "devDependencies": {
-    "@babel/cli": "^7.14.8",
-    "@babel/core": "^7.15.0",
-    "@babel/node": "^7.14.9",
-    "@babel/preset-env": "^7.15.0",
-    "browser-sync": "^2.27.5",
+    "@babel/cli": "^7.18.10",
+    "@babel/core": "^7.18.10",
+    "@babel/node": "^7.18.10",
+    "@babel/preset-env": "^7.18.10",
+    "add": "^2.0.6",
+    "browser-sync": "^2.27.10",
+    "caniuse-lite": "^1.0.30001374",
     "del": "^6.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-import": "^2.24.2",
-    "eslint-plugin-lodash": "^7.3.0",
-    "eslint-plugin-promise": "^5.1.0",
-    "eslint-plugin-sonarjs": "^0.10.0",
+    "eslint": "^8.21.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-lodash": "^7.4.0",
+    "eslint-plugin-promise": "^6.0.0",
+    "eslint-plugin-sonarjs": "^0.15.0",
     "global": "^4.4.0",
     "gulp": "^4.0.2",
     "gulp-add-src": "^1.0.0",
@@ -26,22 +28,29 @@
     "gulp-concat": "^2.6.1",
     "gulp-debug": "^4.0.0",
     "gulp-favicons": "^3.0.0",
+    "gulp-group-css-media-queries": "^1.2.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-if": "^3.0.0",
     "gulp-imagemin": "^7.1.0",
-    "gulp-purgecss": "^4.0.3",
+    "gulp-purgecss": "^4.1.3",
     "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
+    "gulp-replace": "^1.1.3",
+    "gulp-sass": "^5.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-uglify": "^3.0.2",
     "gulp-useref": "^5.0.0",
     "imagemin-giflossy": "^5.1.10",
-    "imagemin-mozjpeg": "^9.0.0",
+    "imagemin-mozjpeg": "9.0.0",
     "imagemin-pngquant": "^9.0.2",
     "imagemin-zopfli": "^7.0.0",
+    "lazypipe": "^1.0.2",
     "require-dir": "^1.2.0",
-    "stylelint": "^13.13.1",
-    "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.19.0"
+    "sass": "^1.54.3",
+    "stylelint": "^14.9.1",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-order": "^5.0.0",
+    "stylelint-scss": "^4.3.0",
+    "yarn": "^1.22.19",
+    "yarn-upgrade-all": "^0.7.1"
   }
 }
